[gd_scene load_steps=2 format=3 uid="uid://dqcboi3mvw4co"]

[ext_resource type="Script" path="res://Interfaz/pause_menu.gd" id="1_5o6do"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_5o6do")

[node name="pause_control" type="Control" parent="."]
process_mode = 3
z_index = 2
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="darker" type="ColorRect" parent="pause_control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.552941)
metadata/_edit_use_anchors_ = true

[node name="continue" type="Button" parent="pause_control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -15.5
offset_right = 36.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "REANUDAR"
metadata/_edit_use_anchors_ = true

[node name="reload" type="Button" parent="pause_control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 32.0
offset_right = 36.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "REINICIAR"
metadata/_edit_use_anchors_ = true

[node name="quit" type="Button" parent="pause_control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 82.0
offset_right = 38.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
text = "SALIR"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="pause_control/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="pause_control/reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="pause_control/quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="pause_control/quit" to="." method="_on_quit_toggled"]
